[Task/#0090] - Fixed some alignments and styles

--- a/angular-app/src/assets/scss/dish-details.component.scss
+++ b/angular-app/src/assets/scss/dish-details.component.scss
@@ -171,27 +171,27 @@
 }
 
 .img-responsive{
-    @media (min-width: 2560px) {
+    @media (max-width: 2560px) {
         width: 900px;
         height: 900px;
         margin-bottom: 175px;
     }
 
-    @media (min-width: 1440px) {
+    @media (max-width: 1440px) {
         width: 550px;
         height: 550px;
         margin-top: -28px;
         margin-right: -20px;
     }
 
-    @media (min-width: 1024px) {
+    @media (max-width: 1024px) {
         width: 500px;
         height: 500px;
         margin-top: -42px;
         margin-right: -20px;
     }
 
-    @media (min-width: 768px) {
+    @media (max-width: 768px) {
         width: 300px;
         height: 300px;
         margin-top: -33px;
@@ -208,7 +208,7 @@
         height: 1022px;
     }
 
-    @media (min-width: 768px){
+    @media (max-width: 768px){
         width: 40%;
     }
 }
